[package]
name = "frequenzimetro-arduino"
version = "0.1.0"
authors = ["Valerio Formato <valerio.formato@cern.ch>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[[bin]]
name = "frequenzimetro-arduino"
test = false
bench = false

[dependencies]
panic-halt = "0.2.0"
ufmt = "=0.2.0"
nb = "0.1.2"
embedded-hal = "0.2.3"
avr-device = "0.5.0"
cfg-if = "1.0.0"
fixed = "=1.17.0"
ufmt_float = "0.2.0"
ufmt-write = "0.1.0"
heapless = "0.7.16"
portable-atomic = "1.0.1"

[dependencies.arduino-hal]
git = "https://github.com/rahix/avr-hal"
rev = "4c9c44c314eb061ee20556ef10d45dea36e75ee4"
features = ["arduino-nano"]

# Configure the build for minimal size - AVRs have very little program memory
[profile.dev]
panic = "abort"
lto = true
opt-level = "s"

[profile.release]
panic = "abort"
codegen-units = 1
debug = true
lto = true
opt-level = "s"

[profile.dev.package.compiler_builtins]
overflow-checks = false
